--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Il mio Portfolio</title>
+  <title>Portfolio Gianluca Pirri</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Ciao, sono Gianluca</h1>
+    <h1>Ciao, sono Gianluca Pirri</h1>
     <p>Ingegnere elettronico | Appassionato di Scienza, tecnologia e AI</p>
   </header>
 
   <section id="progetti">
-    <h2>I miei progetti</h2>
+    <h2>I miei progetti verranno esposti in seguito</h2>
     <div class="project">
       <h3>Progetto 1</h3>
-      <p>Descrizione breve del progetto.</p>
+      <p>devo trovare la voglia di caricarli :j</p>
       <a href="#" target="_blank">Guarda il progetto</a>
     </div>
     <!-- Puoi duplicare altri progetti -->
